Converted from JUnit4 to JUnit5.